# cvqllm

./: README.md
FlexLLMGen-main/: pyproject.toml
FlexLLMGen-main/flexllmgen/: flex_opt.py  pytorch_backend.py  vector_quant.py
FlexLLMGen-main/flexllmgen/debug_tool/: codebook_train.py  encrypt.py  vector_quant.py
FlexLLMGen-main/flexllmgen/encrypt_engine/: encrypt.py
FlexLLMGen-main/flexllmgen/gptq/: uniform_quantizer.py  vq_quant.py
FlexLLMGen-main/flexllmgen/utils/: memory_monitor.py
