[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvq-flexllmgen"
version = "0.1.0"
description = "CVQ优化版FlexLLMGen：基于FlexLLMGen的修改版本，添加了自适应量化功能，提高大型语言模型在单GPU上的性能。"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=1.12", "transformers>=4.24",
    "numpy", "tqdm", "pulp", "attrs",
]

[project.urls]
"Homepage" = "https://github.com/zhoueri/cvqllm"
"Bug Tracker" = "https://github.com/zhoueri/cvqllm/issues"

[tool.setuptools.packages.find]
exclude = ["benchmark*", "dist*", "playground*", "scripts*"]

[tool.wheel]
exclude = ["benchmark*", "dist*", "playground*", "scripts*"]


